--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.6.2",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xterm": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
