--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@uiw/react-codemirror": "^4.21.21",
     "axios": "^1.6.2",
     "codemirror": "^6.0.1",
+    "compilex": "^0.7.4",
+    "ezcompilex": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "xterm": "^5.3.0"
